--- a/41-ProyIniGCILengSimple/CompiladorApp/nbproject/project.properties
+++ b/41-ProyIniGCILengSimple/CompiladorApp/nbproject/project.properties
@@ -31,11 +31,11 @@ dist.jar=${dist.dir}/CompiladorApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.CompiladorLib.jar=libreriasJAR/CompiladorLib.jar
+file.reference.CompiladorLib-v4.jar=libreriasJAR\\CompiladorLib-v4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.CompiladorLib.jar}
+    ${file.reference.CompiladorLib-v4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
